--- a/OvertimeCafe/Styles/ButtonStyle.xaml
+++ b/OvertimeCafe/Styles/ButtonStyle.xaml
@@ -1,4 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style TargetType="Button">
+        <Setter Property="FontSize" Value="25" />
+        <Setter Property="FontFamily" Value="Tahoma" />
+        <Setter Property="Width" Value="200" />
+        <Setter Property="Height" Value="50" />
+        <Setter Property="Background" Value="#FF81BF5D" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="BorderThickness" Value="0" />
+    </Style>
+    <Style TargetType="Border">
+        <Setter Property="CornerRadius" Value="4" />
+    </Style>
 </ResourceDictionary>
