--- a/OvertimeCafe/Styles/PasswordBoxStyle.xaml
+++ b/OvertimeCafe/Styles/PasswordBoxStyle.xaml
@@ -1,11 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="TextBox">
+    <Style TargetType="PasswordBox">
         <Setter Property="FontSize" Value="25" />
         <Setter Property="FontFamily" Value="Tahoma" />
         <Setter Property="Height" Value="50" />
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Width" Value="300" />
+        <Setter Property="PasswordChar" Value="*" />
     </Style>
 </ResourceDictionary>
