--- a/OvertimeCafe/Styles/PasswordBoxStyle.xaml
+++ b/OvertimeCafe/Styles/PasswordBoxStyle.xaml
@@ -8,5 +8,6 @@
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Width" Value="300" />
         <Setter Property="PasswordChar" Value="*" />
+        <Setter Property="BorderBrush" Value="Black" />
     </Style>
 </ResourceDictionary>
