--- a/OvertimeCafe/Views/Pages/TablesPage.xaml
+++ b/OvertimeCafe/Views/Pages/TablesPage.xaml
@@ -13,7 +13,7 @@
         </Style></Page.Resources>
 
     <Grid>
-        <ListBox Name="TablesLB" HorizontalContentAlignment="Center">
+        <ListBox Name="TablesLB" HorizontalContentAlignment="Center" MouseDoubleClick="TablesLB_MouseDoubleClick" Width="750">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid Background="#FF81BF5D" HorizontalAlignment="Center" Width="200" Margin="0 5">
