--- a/OvertimeCafe/Views/AdminViews/Pages/OrdersPage.xaml
+++ b/OvertimeCafe/Views/AdminViews/Pages/OrdersPage.xaml
@@ -1,17 +1,12 @@
-﻿<Window x:Class="OvertimeCafe.Views.Windows.OrdersWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OvertimeCafe.Views.Windows"
-        mc:Ignorable="d"
-            Height="450" Width="800"
-    WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <Window.Resources>
-        <Style TargetType="Border">
-            <Setter Property="CornerRadius" Value="0" />
-        </Style>
-    </Window.Resources>
+﻿<Page x:Class="OvertimeCafe.Views.AdminViews.Pages.OrdersPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:OvertimeCafe.Views.AdminViews.Pages"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="OrdersPage">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -42,7 +37,7 @@
                             <ColumnDefinition Width="1*" />
                             <ColumnDefinition Width="20" />
                         </Grid.ColumnDefinitions>
-                        
+
                         <TextBlock Text="{Binding Dish.Name}" HorizontalAlignment="Center" Padding="10 5" />
                         <TextBlock Text="{Binding DishStatus.Name}" Grid.Column="1"/>
                     </Grid>
@@ -53,4 +48,4 @@
         <Button Name="AddOrderBTn" Content="Добавить" Click="AddOrderBTn_Click" Grid.Row="3" HorizontalAlignment="Left" Margin="20 0 0 0"/>
         <Button Name="CloseBtn" Content="Закрыть" Click="CloseBtn_Click" Grid.Row="3" HorizontalAlignment="Left" Margin="250 0 0 0"/>
     </Grid>
-</Window>
+</Page>
