--- a/OvertimeCafe/Styles/ListBoxStyle.xaml
+++ b/OvertimeCafe/Styles/ListBoxStyle.xaml
@@ -24,6 +24,7 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
     <Style TargetType="ListBox" x:Key="ShiftStaffLb">
         <Setter Property="ItemTemplate">
             <Setter.Value>
@@ -48,5 +49,27 @@
             </Setter.Value>
         </Setter>
     </Style>
-
+    
+    <Style TargetType="ListBox" x:Key="DishesLb">
+        <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <Grid>
+                        <Border Background="#FF81BF5D" CornerRadius="5" Width="250" Margin="10" Height="350"/>
+                        <StackPanel HorizontalAlignment="Center" Width="250" Margin="10" Height="350">
+                            <StackPanel.Resources>
+                                <Style TargetType="Border">
+                                    <Setter Property="CornerRadius" Value="10" />
+                                </Style>
+                            </StackPanel.Resources>
+                            <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Padding="10 5" TextWrapping="Wrap" Width="250" FontSize="20"/>
+                            <Image Source="{Binding Image}" Grid.Row="1"/>
+                            <TextBlock Text="{Binding Composition}" HorizontalAlignment="Right" Padding="10 5" Grid.Row="2" TextWrapping="Wrap" Width="250" FontSize="18"/>
+                            <TextBlock Text="{Binding Type.Name}" Grid.Row="3" HorizontalAlignment="Left" Padding="10 5" TextWrapping="Wrap" Width="250" FontSize="20"/>
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
