--- a/OvertimeCafe/Styles/PasswordBoxStyle.xaml
+++ b/OvertimeCafe/Styles/PasswordBoxStyle.xaml
@@ -7,7 +7,19 @@
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Width" Value="300" />
-        <Setter Property="PasswordChar" Value="*" />
         <Setter Property="BorderBrush" Value="Black" />
+        <Setter Property="Padding" Value="5 0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="PasswordBox">
+                    <Border Background="{TemplateBinding Background}"  
+                    BorderBrush="{TemplateBinding BorderBrush}"  
+                    BorderThickness="{TemplateBinding BorderThickness}"  
+                    CornerRadius="5">
+                        <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
