--- a/OvertimeCafe/Styles/TextBoxStyle.xaml
+++ b/OvertimeCafe/Styles/TextBoxStyle.xaml
@@ -1,12 +1,25 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="TextBox">
-        <Setter Property="FontSize" Value="25" />
-        <Setter Property="FontFamily" Value="Tahoma" />
-        <Setter Property="Height" Value="50" />
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Width" Value="300" />
-        <Setter Property="BorderBrush" Value="Black" />
-    </Style>
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
+                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">  
+   <Style TargetType="TextBox">  
+       <Setter Property="FontSize" Value="25" />  
+       <Setter Property="FontFamily" Value="Tahoma" />  
+       <Setter Property="Height" Value="50" />  
+       <Setter Property="VerticalContentAlignment" Value="Center"/>  
+       <Setter Property="VerticalAlignment" Value="Center" />  
+       <Setter Property="Width" Value="300" />  
+       <Setter Property="BorderBrush" Value="Black" />
+        <Setter Property="Padding" Value="5 0" />
+        <Setter Property="Template">  
+           <Setter.Value>  
+               <ControlTemplate TargetType="TextBox">  
+                   <Border Background="{TemplateBinding Background}"  
+                           BorderBrush="{TemplateBinding BorderBrush}"  
+                           BorderThickness="{TemplateBinding BorderThickness}"  
+                           CornerRadius="5">  
+                       <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>  
+                   </Border>  
+               </ControlTemplate>  
+           </Setter.Value>  
+       </Setter>  
+   </Style>  
 </ResourceDictionary>
